<resources>
    <string name="app_name">Profile</string>
    <string name="avatar_title">Select Avatar</string>
    <string name="profile_title">User profile</string>
    <string name="txtName_h">(Name)</string>
    <string name="lblName_txt">Name (*)</string>
    <string name="txtEmail_h">(Email)</string>
    <string name="lblEmail">Email (*)</string>
    <string name="profile_invalid_name">Invalid Name</string>
    <string name="profile_invalid_email">Invalid Email</string>
    <string name="profile_invalid_phonenumber">Invalid PhoneNumber</string>
    <string name="profile_invalid_address">Invalid Address</string>
    <string name="profile_invalid_web">Invalid Web</string>
    <string name="pikachu">Pikachu</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="gyarados">Gyarados</string>
    <string name="cubone">Cubone</string>
    <string name="feebas">Feebas</string>
    <string name="jigglypuff">Jigglypuff</string>
    <string name="chikorita">Chikorita</string>
    <string name="giratina">Giratina</string>
    <string name="pachirisu">Pachirisu</string>
    <string name="portraitDimRatio">w,16:9</string>
    <string name="landscapeDimRatio">w,9:16</string>
    <string name="txtWeb_h">(url)</string>
    <string name="lblAddress_h">(address)</string>
    <string name="lblAddress_txt">Address</string>
    <string name="txtPhone_h">(phone)</string>
    <string name="lblPhonenumbar_txt">Phone number (*)</string>
    <string name="required">(*) Required</string>
    <string name="avatar_select">Select</string>
    <string name="profile_save">Save</string>
    <string name="txtWeb">Web</string>
</resources>
