<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgAvatar4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cubone" />

    <TextView
        android:id="@+id/lblAvatar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/cubone"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar4"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar4"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar4" />

    <CheckBox
        android:id="@+id/chkAvatar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar4"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar4" />

    <ImageView
        android:id="@+id/imgAvatar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pikachu" />

    <TextView
        android:id="@+id/lblAvatar1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/pikachu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar1"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar1"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar1" />

    <CheckBox
        android:id="@+id/chkAvatar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar1"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar1" />

    <ImageView
        android:id="@+id/imgAvatar7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar4"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gyarados" />

    <TextView
        android:id="@+id/lblAvatar7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/gyarados"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar7"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar7"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar7" />

    <CheckBox
        android:id="@+id/chkAvatar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar7"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar7" />

    <ImageView
        android:id="@+id/imgAvatar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar1"
        app:srcCompat="@drawable/bulbasur" />

    <TextView
        android:id="@+id/lblAvatar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/bulbasaur"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar2"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar2"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar2" />

    <CheckBox
        android:id="@+id/chkAvatar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar2"
        app:layout_constraintTop_toBottomOf="@+id/lblAvatar1" />

    <ImageView
        android:id="@+id/imgAvatar5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar2"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar4"
        app:srcCompat="@drawable/feebas" />

    <TextView
        android:id="@+id/lblAvatar5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/feebas"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar5"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar5"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar5" />

    <CheckBox
        android:id="@+id/chkAvatar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar5"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar5" />

    <ImageView
        android:id="@+id/imgAvatar8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar5"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar7"
        app:srcCompat="@drawable/jigglypuff" />

    <TextView
        android:id="@+id/lblAvatar8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/jigglypuff"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar8"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar8"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar8" />

    <CheckBox
        android:id="@+id/chkAvatar8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar8"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar8" />

    <ImageView
        android:id="@+id/imgAvatar3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar2"
        app:srcCompat="@drawable/chikorita" />

    <TextView
        android:id="@+id/lblAvatar3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/chikorita"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar3"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar3"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar3" />

    <CheckBox
        android:id="@+id/chkAvatar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar3"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar3" />

    <ImageView
        android:id="@+id/imgAvatar6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toStartOf="@+id/imgAvatar9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar3"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar5"
        app:srcCompat="@drawable/giratina" />

    <TextView
        android:id="@+id/lblAvatar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/giratina"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar6"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar6"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar6"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar6" />

    <CheckBox
        android:id="@+id/chkAvatar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar6"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar6" />

    <ImageView
        android:id="@+id/imgAvatar9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="@string/portraitDimRatio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar6"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar8"
        app:srcCompat="@drawable/pachirisu" />

    <TextView
        android:id="@+id/lblAvatar9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#8F5C5C5C"
        android:text="@string/pachirisu"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAvatar9"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar9"
        app:layout_constraintStart_toStartOf="@+id/imgAvatar9" />

    <CheckBox
        android:id="@+id/chkAvatar9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="@+id/imgAvatar9"
        app:layout_constraintTop_toTopOf="@+id/imgAvatar9" />
</androidx.constraintlayout.widget.ConstraintLayout>